@@ -1,8 +1,11 @@
+
+https://user-images.githubusercontent.com/85125862/121289543-4d175800-c90f-11eb-8011-f0fb538a2381.mp4
+
 # Visualization_of_Sorting_Algorithms desktop app
 - Project sử dụng thư viện javaFX 11.02. Link dowload javaFX: 
 https://gluonhq.com/download/javafx-11-0-2-sdk-windows/
 # Để khởi chạy được ứng dụng: 
 - Import thư viện font-awesome và javaFX 11.02 
 - Khởi tạo môi trường javaFX:
-Edit configuration/Virtual machine options: (địa chỉ file javaFX11.02.lib) 
-- add-modules (link file javaFx.lib) javafx.controls,javafx.fxml
+Edit configuration/Virtual machine options với địa chỉ file javaFX11.02.lib là: C:\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib
+- --module-path C:\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml
